--- a/index.html
+++ b/index.html
@@ -7,22 +7,55 @@
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <style>
-    /* ===== Hero ===== */
-    .hero { background: linear-gradient(135deg, #fdf2f8, #fefce8);
-            padding: 80px 20px; text-align: center; border-bottom: 1px solid #f3f4f6; }
-    .hero-title { font-size: 2.2rem; font-weight: 800; color: #111827; margin-bottom: 16px; letter-spacing: -0.02em; }
-    .hero-sub { font-size: 1.1rem; color: #374151; line-height: 1.6; margin-bottom: 28px; }
-    .hero-actions .btn { display: inline-block; padding: 14px 28px; border-radius: 999px; font-size: 1rem; font-weight: 700;
-                         text-decoration: none; transition: transform .08s ease, background .2s ease, color .2s ease, box-shadow .2s ease;
-                         box-shadow: 0 6px 16px rgba(17,24,39,.12); }
-    .btn.primary { background:#111827; color:#fff; border:1px solid #111827; }
-    .btn.primary:hover { transform: translateY(-1px); background:#374151; border-color:#374151; }
+    :root{
+      --ink:#111827; --sub:#374151; --muted:#6b7280; --line:#eef2f7;
+      --brand:#111827; --g1:#fdf2f8; --g2:#fefce8;
+    }
 
-    /* ===== Highlights ===== */
+    /* ===== Hero ===== */
+    .hero {
+      background: radial-gradient(1200px 600px at 50% -100px, var(--g1), transparent 60%),
+                  linear-gradient(135deg, var(--g1), var(--g2));
+      padding: 84px 20px 72px;
+      text-align: center;
+      border-bottom: 1px solid var(--line);
+      position: relative;
+      overflow: hidden;
+    }
+    .hero-title {
+      font-size: 2.3rem; font-weight: 900; color: var(--ink);
+      margin-bottom: 16px; letter-spacing: -0.02em;
+    }
+    .hero-sub {
+      font-size: 1.1rem; color: var(--sub); line-height: 1.7; margin-bottom: 28px;
+    }
+    .hero-actions { display:flex; justify-content:center; gap:12px; flex-wrap:wrap; }
+    .btn {
+      display:inline-block; padding: 15px 28px; border-radius: 999px;
+      font-size: 1rem; font-weight: 800; text-decoration: none;
+      transition: transform .08s ease, background .2s ease, color .2s ease, box-shadow .2s ease;
+      border:1px solid var(--brand);
+    }
+    .btn.primary { background: var(--brand); color: #fff; box-shadow: 0 8px 20px rgba(17,24,39,.18); }
+    .btn.primary:hover { transform: translateY(-2px); background:#222; }
+    .btn.ghost { background:#fff; color:var(--brand); border-color:#e5e7eb; }
+    .btn.ghost:hover { transform: translateY(-1px); box-shadow: 0 6px 16px rgba(17,24,39,.10); }
+
+    /* 작은 강조 배지 */
+    .hero-badges { margin: 10px auto 0; display:flex; gap:8px; justify-content:center; flex-wrap:wrap; }
+    .badge {
+      display:inline-flex; align-items:center; gap:6px;
+      padding:6px 12px; border-radius:999px; border:1px solid var(--line); background:#fff;
+      font-weight:800; font-size:.86rem; color:var(--ink);
+    }
+
+    /* ===== Highlights (3컬럼) ===== */
     .highlights { padding: 60px 20px; background: #fff; }
-    .highlights-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-                       gap: 24px; max-width: 1040px; margin: 0 auto; }
-    .highlight { text-align: center; padding: 20px; border-radius: 16px; border:1px solid #eef2f7; background:#fff; }
+    .highlights-grid {
+      display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 24px; max-width: 1040px; margin: 0 auto;
+    }
+    .highlight { text-align: center; padding: 20px; border-radius: 16px; border:1px solid var(--line); background:#fff; }
     .highlight .icon { font-size: 2rem; margin-bottom: 12px; }
     .highlight h3 { font-size: 1.2rem; font-weight: 800; margin-bottom: 8px; color:#111827; }
     .highlight p { font-size: 0.95rem; color: #4b5563; line-height: 1.55; }
@@ -33,45 +66,80 @@
     .section-title { font-size: 1.4rem; font-weight: 800; margin-bottom: 18px; color:#111827; }
 
     .cards { display:grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap:16px; }
-    .card { border:1px solid #eef2f7; border-radius:16px; overflow:hidden; background:#fff;
-            display:flex; flex-direction:column; transition: transform .08s ease, box-shadow .2s ease; }
+    .card {
+      border:1px solid var(--line); border-radius:16px; overflow:hidden; background:#fff;
+      display:flex; flex-direction:column; transition: transform .08s ease, box-shadow .2s ease;
+    }
     .card:hover { transform: translateY(-2px); box-shadow: 0 10px 24px rgba(17,24,39,.08); }
     .card img { width:100%; height:180px; object-fit:cover; }
     .card-body { padding:14px; display:flex; flex-direction:column; gap:8px; }
     .meta { font-size:.9rem; color:#6b7280; }
-    .chip { display:inline-block; padding:2px 10px; border-radius:999px; font-size:.8rem; border:1px solid #e5e7eb; color:#374151; }
+    .chip {
+      display:inline-block; padding:2px 10px; border-radius:999px;
+      font-size:.8rem; border:1px solid #e5e7eb; color:#374151;
+    }
     .chip.approved { background:#ecfdf5; border-color:#bbf7d0; color:#065f46; }
     .chip.pending { background:#fff7ed; border-color:#fed7aa; color:#9a3412; }
 
     .hearts { display:flex; align-items:center; gap:8px; font-weight:800; color:#111827; }
-    .hearts .count { font-size:1.1rem; padding:4px 10px; border-radius:10px; background:#f1f5f9; }
+    .hearts .count { font-size:1.1rem; padding:6px 12px; border-radius:10px; background:#f1f5f9; }
     .money { font-size:.9rem; color:#4b5563; }
     .card-actions { margin-top:8px; display:flex; justify-content:flex-end; gap:8px; }
-    .btn.small { padding:8px 12px; border-radius:10px; font-weight:700; border:1px solid #111; background:#111; color:#fff; text-decoration:none; }
-    .btn.ghost { background:#fff; color:#111; border:1px solid #e5e7eb; }
+    .btn.small { padding:8px 12px; border-radius:10px; font-weight:800; border:1px solid var(--brand); background:var(--brand); color:#fff; text-decoration:none; }
+    .btn.ghost-small { padding:8px 12px; border-radius:10px; font-weight:800; border:1px solid #e5e7eb; background:#fff; color:#111; text-decoration:none; }
 
+    /* ===== Sticky CTA Bar (스크롤 시 나타남) ===== */
+    .sticky-cta {
+      position: sticky; bottom: 12px; z-index: 60; pointer-events: none;
+      display:flex; justify-content:center; padding: 0 12px;
+    }
+    .sticky-cta__inner {
+      pointer-events: auto;
+      display:flex; gap:8px; align-items:center; justify-content:center; flex-wrap:wrap;
+      background:#fff; border:1px solid var(--line); border-radius: 16px;
+      padding:10px 12px; box-shadow: 0 12px 28px rgba(17,24,39,.18);
+      transform: translateY(20px); opacity: 0; transition: all .2s ease;
+    }
+    .sticky-cta.is-visible .sticky-cta__inner {
+      transform: translateY(0); opacity: 1;
+    }
+    .sticky-cta .btn { padding:10px 16px; border-radius: 12px; font-weight: 800; }
+    .sticky-cta .btn.primary { background: var(--brand); color:#fff; border-color: var(--brand); }
+    .sticky-cta .btn.ghost { background:#fff; color:var(--brand); border-color:#e5e7eb; }
+
+    /* ===== Accessibility utility ===== */
     .sr-only { position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); border:0; }
+
+    @media (max-width: 640px){
+      .hero-title{ font-size: 1.9rem; }
+      .btn{ padding: 14px 22px; }
+    }
   </style>
 </head>
 <body>
+  <!-- 헤더/푸터는 include.js가 주입 -->
   <div data-include="header"></div>
 
   <!-- Hero -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1 class="hero-title">법인 없는 첫 후원 플랫폼</h1>
-      <p class="hero-sub">
-        당신의 마음이 곧장 구조자에게 닿습니다.<br/>
-        책임 없는 구조는 등록할 수 없습니다.<br/>
-        돈보다 연결이 먼저 기록됩니다.
-      </p>
-      <div class="hero-actions">
-        <a href="project_list.html" class="btn primary">🐾 지금 구조자 만나보기</a>
-      </div>
+  <section class="hero" aria-labelledby="home-hero-title">
+    <h1 id="home-hero-title" class="hero-title">법인 없는 첫 후원 플랫폼</h1>
+    <p class="hero-sub">
+      당신의 마음이 곧장 구조자에게 닿습니다.<br/>
+      책임 없는 구조는 등록할 수 없습니다.<br/>
+      돈보다 연결이 먼저 기록됩니다.
+    </p>
+    <div class="hero-actions">
+      <a href="project_list.html" class="btn primary">🐾 지금 구조자 만나보기</a>
+      <a href="create.html" class="btn ghost">등록하기</a>
+    </div>
+    <div class="hero-badges" aria-hidden="true">
+      <span class="badge">개인↔개인 직연결</span>
+      <span class="badge">구조자 책임 필수</span>
+      <span class="badge">금액보다 연결</span>
     </div>
   </section>
 
-  <!-- Highlights -->
+  <!-- 3컬럼 하이라이트 -->
   <section class="highlights" aria-labelledby="hl-title">
     <h2 id="hl-title" class="sr-only">Project.PAW 핵심 철학</h2>
     <div class="highlights-grid">
@@ -99,18 +167,28 @@
       <h2 id="list-title" class="section-title">진행중인 구조 프로젝트</h2>
       <div id="home-cards" class="cards"></div>
       <div style="text-align:right; margin-top:12px;">
-        <a class="btn small ghost" href="project_list.html">전체 보기 →</a>
+        <a class="btn ghost-small" href="project_list.html">전체 보기 →</a>
       </div>
     </div>
   </section>
 
+  <!-- Sticky CTA Bar -->
+  <div class="sticky-cta" aria-hidden="true">
+    <div class="sticky-cta__inner" id="stickyCta">
+      <a href="project_list.html" class="btn primary">🐾 지금 구조자 만나보기</a>
+      <a href="create.html" class="btn ghost">등록하기</a>
+    </div>
+  </div>
+
   <div data-include="footer"></div>
 
+  <!-- 레이아웃 주입 -->
   <script type="module">
     import { injectLayout } from "./js/include.js";
     injectLayout({ active: "index" });
   </script>
 
+  <!-- 홈 카드 렌더링: localStorage "projects"에서 4개 미리보기 + '연결된 마음 수' 우선 -->
   <script>
     (function(){
       const $wrap = document.getElementById('home-cards');
@@ -150,6 +228,24 @@
         }).join('');
       }
       render();
+    })();
+  </script>
+
+  <!-- Sticky CTA 동작: 히어로 지나면 나타나고, 맨 위에선 숨김 -->
+  <script>
+    (function(){
+      const sticky = document.getElementById('stickyCta');
+      const hero = document.querySelector('.hero');
+      const onScroll = () => {
+        const heroBottom = hero.getBoundingClientRect().bottom;
+        if (heroBottom < 0) {
+          sticky.parentElement.classList.add('is-visible');
+        } else {
+          sticky.parentElement.classList.remove('is-visible');
+        }
+      };
+      window.addEventListener('scroll', onScroll, { passive: true });
+      onScroll();
     })();
   </script>
 </body>
